src/objects/Test_Object__c.object
<CustomObject><fields>
        <fullName>Test_Field1__c</fullName>
        <label>Test Field1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Test_Field2__c</fullName>
        <label>Test Field2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Test_Field3__c</fullName>
        <label>Test Field3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>This objects just for CI JOBS testing</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>false</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Test Object</label><nameField>
        <label>Test Object Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Test Objects</pluralLabel><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility></CustomObject>